# ted-startup

./: .env.example  .env.prod.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  docker-compose.prod.yml  docker-compose.yml  scaffolding_check.sh
src/backend_kiwoom/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  STATUS.md  alembic.ini  docker-compose.yml  pyproject.toml
src/backend_kiwoom/app/: main.py  scheduler.py
src/backend_kiwoom/app/application/: constants.py  exceptions.py
src/backend_kiwoom/app/batch/: __init__.py  business_day.py  daily_flow_job.py  investor_flow_jobs.py  lending_market_job.py  lending_stock_job.py  monthly_ohlcv_job.py  ohlcv_daily_job.py  ranking_jobs.py  sector_daily_ohlcv_job.py  sector_sync_job.py  short_selling_job.py  stock_fundamental_job.py  stock_master_job.py  weekly_ohlcv_job.py  yearly_ohlcv_job.py
src/backend_kiwoom/app/config/: settings.py
src/backend_kiwoom/app/observability/: logging.py
src/backend_kiwoom/app/security/: kiwoom_credential_cipher.py  scrub.py
src/backend_kiwoom/docs/operations/: backfill-daily-flow-results.md  backfill-daily-flow-runbook.md  backfill-measurement-results.md  backfill-measurement-runbook.md  credential-master-key-guide.md  dry-run-chart-alphanumeric-results.md
src/backend_kiwoom/docs/plans/: endpoint-01-au10001.md  endpoint-02-au10002.md  endpoint-03-ka10099.md  endpoint-04-ka10100.md  endpoint-05-ka10001.md  endpoint-06-ka10081.md  endpoint-07-ka10082.md  endpoint-08-ka10083.md  endpoint-09-ka10094.md  endpoint-10-ka10086.md  endpoint-11-ka10079.md  endpoint-12-ka10080.md  endpoint-13-ka20006.md  endpoint-14-ka10101.md  endpoint-15-ka10014.md  endpoint-16-ka10068.md  endpoint-17-ka20068.md  endpoint-18-ka10027.md  endpoint-19-ka10030.md  endpoint-20-ka10031.md  endpoint-21-ka10032.md  endpoint-22-ka10023.md  endpoint-23-ka10058.md  endpoint-24-ka10059.md  endpoint-25-ka10131.md  master.md  phase-c-3-weekly-monthly-ohlcv.md  phase-c-alphanumeric-backfill.md  phase-c-backfill-daily-flow.md  phase-c-backfill-ohlcv.md  phase-c-chart-alphanumeric-guard.md  phase-c-cron-shift-to-morning.md  phase-c-docker-deploy.md  phase-c-refactor-r1-error-handling.md  phase-c-refactor-r2-defer-cleanup.md  phase-c-scheduler-enable.md  phase-d-scheduler-misfire-grace.md  phase-f-1-ka10001-numeric-sentinel.md  phase-f-2-backfill-alphanumeric-guard.md  phase-f-3-r2-inherit-cleanup.md  (+3 more)
src/backend_kiwoom/migrations/: env.py
src/backend_kiwoom/migrations/versions/: 001_init_kiwoom_schema.py  002_kiwoom_sector.py  003_kiwoom_stock.py  004_kiwoom_stock_fundamental.py  005_kiwoom_stock_price_krx.py  006_kiwoom_stock_price_nxt.py  007_kiwoom_stock_daily_flow.py  008_drop_daily_flow_dup_columns.py  009_stock_price_weekly_krx.py  010_stock_price_weekly_nxt.py  011_stock_price_monthly_krx.py  012_stock_price_monthly_nxt.py  013_drop_daily_flow_dup_2.py  014_stock_price_yearly.py  015_sector_price_daily.py  016_short_lending.py  017_ka10001_numeric_precision.py  018_ranking_snapshot.py  019_investor_flow.py
src/backend_kiwoom/scripts/: backfill_daily_flow.py  backfill_lending.py  backfill_lending_stock.py  backfill_ohlcv.py  backfill_short.py  dry_run_chart_alphanumeric.py  dry_run_ka10086_capture.py  entrypoint.py  register_credential.py  sync_stock_master.py
src/backend_kiwoom/tests/: conftest.py  test_application_exceptions.py  test_backfill_daily_flow_cli.py  test_backfill_lending_stock_filter.py  test_backfill_ohlcv_cli.py  test_backfill_short_filter.py  test_backfill_short_summary.py  test_business_day.py  test_daily_flow_deps.py  test_daily_flow_router.py  test_daily_flow_scheduler.py  test_daily_market_display_mode.py  test_exchange_type.py  test_frgn_orgn_consecutive_repository.py  test_frgnistt_client.py  test_fundamental_router.py  test_ingest_daily_flow_service.py  test_ingest_daily_ohlcv_service.py  test_ingest_frgn_orgn_continuous_use_case.py  test_ingest_investor_daily_use_case.py  test_ingest_stock_investor_breakdown_use_case.py  test_investor_flow_daily_repository.py  test_investor_flow_dto.py  test_investor_flow_jobs.py  test_investor_flow_router.py  test_kiwoom_auth_client.py  test_kiwoom_auth_dto.py  test_kiwoom_auth_router.py  test_kiwoom_chart_client.py  test_kiwoom_chart_client_periodic.py  test_kiwoom_client.py  test_kiwoom_credential_cipher.py  test_kiwoom_credential_repository.py  test_kiwoom_mrkcond_client.py  test_kiwoom_shsa_client.py  test_kiwoom_slb_client.py  test_kiwoom_stkinfo_basic_info.py  test_kiwoom_stkinfo_client.py  test_kiwoom_stkinfo_lookup.py  test_kiwoom_stkinfo_stock_list.py  (+86 more)
src/backend_kiwoom/tests/integration/: __init__.py  test_investor_flow_e2e.py  test_ranking_snapshot_e2e.py
src/backend_py/: .dockerignore  .env.example  Dockerfile  README.md  SPEC.md  alembic.ini  pyproject.toml
src/backend_py/app/: main.py
src/backend_py/app/batch/: backtest_job.py  market_data_job.py  scheduler.py  trading_day.py
src/backend_py/app/config/: settings.py
src/backend_py/app/observability/: __init__.py  logging.py
src/backend_py/app/security/: __init__.py  credential_cipher.py
src/backend_py/migrations/: env.py
src/backend_py/migrations/versions/: 001_init_schema.py  002_notification_preference.py  003_portfolio_schema.py  004_dart_corp_mapping.py  (+4 more)
src/backend_py/scripts/: __init__.py  backfill_signal_detection.py  backfill_stock_prices.py  entrypoint.py  fix_stock_names.py  run_backtest.py  seed_backtest_e2e.py  seed_e2e_accounts.py  seed_ui_demo.py  sync_dart_corp_mapping.py
src/backend_py/tests/: conftest.py  test_analysis_report.py  test_backfill_stock_prices.py  test_batch.py  test_brokerage_credential.py  test_cors.py  test_dart_client.py  test_e2e_flow.py  test_excel_import.py  test_health.py  test_kis_client.py  test_kis_real_sync.py  test_krx_client.py  test_logging_masking.py  test_market_data_lending_deltas.py  test_notification_service.py  test_portfolio.py  test_repositories.py  test_routers.py  test_seed_ui_demo.py  test_services.py  test_sync_dart_corp_mapping.py  test_telegram_client.py
(+283 files in other folders)
