[project]
name = "ted-signal-backend"
version = "0.1.0"
description = "TED Signal backend (Python migration of Spring Boot service)"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pykrx>=1.0.45",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "vectorbt>=0.26.0",
    "python-dateutil>=2.9.0",
    "apscheduler>=3.10.4",
    "slowapi>=0.1.9",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "testcontainers[postgres]>=4.8.0",
    "pandas-stubs>=2.2.0",
    "types-python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # Depends()/Query()/Path() in argument defaults — FastAPI 의 공식 DI 패턴
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "prometheus_fastapi_instrumentator.*",
    "pykrx.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
# 기본 addopts 는 마커가 붙은 smoke 테스트를 스킵 — CI 는 외부 호출 0 유지.
# 로컬 개발자가 실 KIS 계정으로 검증하려면 `pytest -m requires_kis_real_account` 명시 실행.
# pytest 8.x 는 커맨드라인 `-m` 이 addopts 의 `-m` 을 override 한다 (마지막 값 승리 규칙).
addopts = [
    "--strict-markers",
    "-ra",
    "-m",
    "not requires_kis_real_account",
]
markers = [
    "requires_kis_real_account: 실 KIS 계정 자격증명 필요 (KIS_REAL_APP_KEY/SECRET/ACCOUNT env). CI 기본 skip, 로컬에서 `pytest -m requires_kis_real_account` 로 실행.",
]
